delete allocation
